@@ -41,6 +41,9 @@ class Smarty_Internal_Compile_Private_Registered_Block extends Smarty_Internal_C
             foreach ($_attr as $_key => $_value) {
                 if (is_int($_key)) {
                     $_paramsArray[] = "$_key=>$_value";
+            	} elseif ($this->compiler->template->caching && in_array($_key,$compiler->smarty->registered_plugins[Smarty::PLUGIN_BLOCK][$tag][2])) {
+					$_value = str_replace("'","^#^",$_value);
+                	$_paramsArray[] = "'$_key'=>^#^.var_export($_value,true).^#^";
                 } else {
                     $_paramsArray[] = "'$_key'=>$_value";
                 } 
